# Jar

./: .clang-tidy  .clangd  .gitignore  .ignore  CMakeLists.txt  LICENSE  README.md  build.ps1  packages.config  vcpkg-configuration.json  vcpkg.json
assets/: README.md
cmake/: FetchGTest.cmake  FetchSlang.cmake  NuGetRestore.cmake
shaders/: BindlessHelpers.slang  BlurHorizontal.slang  BlurVertical.slang  Compute.slang  GeometryPass.slang  LightingPass.slang  Lit.slang  PBR.slang  common.slang
shaders/common/: bindless-helpers.slang  pbr.slang
src/: App.cpp  App.h  CMakeLists.txt  Entity.cpp  Entity.h  ICamera.h  Lighting.h  Material.h  MaterialAsset.h  Mesh.cpp  Mesh.h  OrbitCamera.cpp  OrbitCamera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Triangle.h  Vertex.h  config.cpp  config.h  main.cpp
src/graphics/: BindlessAllocator.cpp  BindlessAllocator.h  ColorBuffer.cpp  ColorBuffer.h  CommandContext.cpp  CommandContext.h  CommandListManager.cpp  CommandListManager.h  Constants.h  Core.cpp  Core.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  GBuffer.cpp  GBuffer.h  GpuBuffer.cpp  GpuBuffer.h  GpuResource.cpp  GpuResource.h  PixelBuffer.cpp  PixelBuffer.h  ReadbackBuffer.cpp  ReadbackBuffer.h  ShaderCache.cpp  ShaderCache.h  StructuredBuffer.cpp  StructuredBuffer.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  UploadBuffer.cpp  UploadBuffer.h
src/graphics/slang/: README.md  SlangCompiler.cpp  SlangCompiler.h  SlangCore.h  SlangInputLayout.cpp  SlangInputLayout.h  SlangPSO.cpp  SlangPSO.h  SlangRootSignatureBuilder.cpp  SlangRootSignatureBuilder.h  SlangTypes.h  SlangUtilities.cpp  SlangUtilities.h
src/ui/: Theme.cpp  Theme.h  UISystem.cpp  UISystem.h
src/ui/widgets/: Outliner.cpp  Outliner.h  Properties.cpp  Properties.h  TitleBar.cpp  TitleBar.h  Viewport.cpp  Viewport.h
src/utils/: MessageBox.cpp  MessageBox.h
tests/: BasicTest.cpp  CMakeLists.txt
